# ParallelAndConcurrentProgrammingInHaskell

kmeans/: CHANGELOG.md  kmeans.cabal
kmeans/app/: Main.hs
rpar/: CHANGELOG.md  README  rpar.cabal
rpar/app/: Main.hs
sudoku-solver/: sudoku-solver.cabal
sudoku-solver/app/: Main.hs
sudoku-solver/lib/: Sudoku.hs
sudoku-solver/test/: Main.hs
