cabal-version:      2.4
name:               rpar
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Vladimir Ovechkin
maintainer:         vladov3000@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable rpar
    main-is:          Main.hs
    ghc-options:      -threaded

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.19.1.0, parallel ==3.2.2.0, time ==1.12.2
    hs-source-dirs:   app
    default-language: Haskell2010
