cabal-version:      2.4
name:               sudoku-solver
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Vladimir Ovechkin
maintainer:         vladov3000@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable sudoku-solver
    main-is:          Main.hs
    ghc-options:      -threaded -O2 -rtsopts
    build-depends:    base ^>=4.20.0.0, parallel ^>=3.2.2.0, deepseq ^>=1.5.0.0, sudoku-solver-library
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite sudoku-solver-test
    main-is:          Main.hs
    ghc-options:      -threaded -fno-ignore-asserts
    type:             exitcode-stdio-1.0
    build-depends:    base   ^>=4.20.0.0
                    , time   ^>=1.12.2
                    , array  ^>=0.5.6.0
                    , split  ^>= 0.2.5
                    , random ^>= 1.2.1.2
                    , sudoku-solver-library
    hs-source-dirs:   test
    default-language: Haskell2010

library sudoku-solver-library
    exposed-modules:  Sudoku
    ghc-options:      -threaded
    build-depends:    base ^>=4.20.0.0, array ^>=0.5.6.0
    hs-source-dirs:   test, lib
    default-language: Haskell2010    
